--- a/app/src/main/res/layout/activity_display_screen.xml
+++ b/app/src/main/res/layout/activity_display_screen.xml
@@ -7,12 +7,14 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:context=".DisplayScreen">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/dRecylerViewDua"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvcontent"
